CHG: remove Aclor Inc., and replace Aclor Servicio with GWC Servicio

--- a/about_us.html
+++ b/about_us.html
@@ -187,8 +187,8 @@
             <p><em><strong>Create</strong></em> the flow of change by developing interesting concepts for a dynamic market. Only by staying one step ahead can we truly evolve.</p>
           </div>
           <div class="TabbedPanelsContent">
-            <p><strong>Aclor</strong> Inc. endeavors to maintain the trust and the confidence of our shareholders, customers, and all its business affiliates by adhering to the highest business ethics.</p>
-            <p>We have incorporated strict standards into our corporate governance practices to model our board committee and management charters, rules, regulations and code of conduct in such a manner to hold all members of <strong>Aclor</strong> Inc. to the highest business standards and ethical practices.</p>
+            <p><strong>Aclor</strong> endeavors to maintain the trust and the confidence of our shareholders, customers, and all its business affiliates by adhering to the highest business ethics.</p>
+            <p>We have incorporated strict standards into our corporate governance practices to model our board committee and management charters, rules, regulations and code of conduct in such a manner to hold all members of <strong>Aclor</strong> to the highest business standards and ethical practices.</p>
           </div>
         </div>
       </div>
