--- a/contact_us.html
+++ b/contact_us.html
@@ -194,16 +194,17 @@
 
         <div id="mapView">
             <p>Address details:<br />
+
+            <br /><span class="text_white"><strong>Aclor International (HQ)</strong></span><br />
+            2619 SAN ISIDRO PKWY # 201, Laredo TX. 78045<br />
+            Office: (1-956) 795-1738<br/>
+            Fax: (1-956) 795-1450</p>
+
             <br /><strong class="text_white">GWC Servicios S.A. DE C.V.</strong><br />
             Carretera Nacional Km. 8.5 Modulo Industrial de<br />
             America C.P. 88295 Nuevo Laredo, Tamaulipas<br />
             Tels. Tel. (52-867) 719 4624<br />
             Fax (52-867) 719 4674<br />
-
-            <br /><span class="text_white"><strong>Aclor Inc. (US HQ)</strong></span><br />
-            2619 SAN ISIDRO PKWY # 201, Laredo TX. 78045<br />
-            Office: (1-956) 795-1738<br/>
-            Fax: (1-956) 795-1450</p>
         </div>
     </div>
 </div>
