--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@
   <div id="mainContent">
     <div class="text" id="imageViewer"><span class="headings">Reimagining Trends</span><br>
       <br>
-    At the dawn of a new venture, Aclor Inc. as the premier international manufacturer and supplier of private label paper products, becomes Aclor International Holding with its strategic partnership with Metiscan. With customers which include some of the most recognized and reputable office supply mass retailers worldwide and also the largest consumer and office retailer in the United States,we invite you to check out our history.</div>
+    At the dawn of a new venture, Aclor International. as the premier international manufacturer and supplier of private label paper products, becomes Aclor International Holding with its strategic partnership with Metiscan. With customers which include some of the most recognized and reputable office supply mass retailers worldwide and also the largest consumer and office retailer in the United States,we invite you to check out our history.</div>
     <div id="imageViewer2">
 	  <div class="content" style="">
 				<h1>Some of our trendy collections</h1>
-		<h3>Throughout the years, Aclor Inc. has been developing<br>
+		<h3>Throughout the years, Aclor International. has been developing<br>
 					trendy and fascinating designs for the stationery market.<br>
 		Enjoy this small gathering of them.</h3>
 	  </div>
@@ -230,7 +230,7 @@
     <div id="imageAclor"><a href="#"><img src="images/aclor_inc.jpg" width="395" height="130"></a></div>
   </div>
   <div id="contentAds2">
-    <div id="imageAclorSO"><a href="#"><img src="images/aclor_so.jpg" width="395" height="130"></a></div>
+    <div id="imageAclorSO"><a href="#"><img src="images/gwc_so.jpg" width="395" height="130"></a></div>
   </div>
   <div id="footer">Copyright &copy; 2013 Aclor International. All rights reserved. Website designed by<a href="mailto:admin@aclor.com"> Chad Hsu </a></div>
 </div>
