--- a/subsidiaries.html
+++ b/subsidiaries.html
@@ -166,20 +166,20 @@
     <div class="text" id="imageViewer">
       <div id="TabbedPanels1" class="TabbedPanels">
         <ul class="TabbedPanelsTabGroup">
-          <li class="TabbedPanelsTab" tabindex="0">Aclor Inc.</li>
+          <li class="TabbedPanelsTab" tabindex="0">Aclor International</li>
           <li class="TabbedPanelsTab" tabindex="0">GWC Servicios</li>
 </ul>
         <div class="TabbedPanelsContentGroup">
           <div class="TabbedPanelsContent">
             <div class="TabbedPanelsContentBW"><img src="images/aclor_ga.jpg" width="480" height="350" alt="Aclor office in Lawrenceville, Georgia"></div>
-            <strong>Aclor</strong> Inc. holds an office in Laredo, TX, where it maintains an in-house warehouse and conducts most of the strategic planning, product development and sales.<br>
+            <strong>Aclor</strong> International holds an office in Laredo, TX, where it maintains an in-house warehouse and conducts most of the strategic planning, product development and sales.<br>
             <br>
-            <strong>Aclor</strong> also has another office in Guangzhou, China. The Guanzhou office is responsible for overseas material sourcing and procurement.<br>
+            <strong>Aclor</strong> International also has another office in Tainan, Taniwan and Guangzhou, China. The Tainan and Guanzhou offices are responsible for overseas material sourcing and procurement.<br>
             <br>
           All these operations are handled by experimented and tried personnel that have more than 20 years in the business, while offering expertise and solutions day-by-day and all year-round.</div>
           <div class="TabbedPanelsContent">
             <div class="TabbedPanelsContentBW"><img src="images/aclor_so_operations.jpg" width="480" height="350" alt="Aclor Servicios Operativos in Nuevo Laredo, Mexico"></div>
-            <strong>GWC</strong> Servicios is located in Nuevo Laredo, Tamaulipas, Mexico, which provides easy access to both metropolitan centers of Texas and Mexico's industrial heartland.<strong> Aclor</strong> Mexico is responsible for the manufacture of various lines of products under the maquila program offered by the mexican government, which makes operation and administration an economically and strategic plus for the plant. Some data:<br>
+            <strong>GWC</strong> Servicios is located in Nuevo Laredo, Tamaulipas, Mexico, which provides easy access to both metropolitan centers of Texas and Mexico's industrial heartland.<strong> GWC </strong> Servicio is responsible for the manufacture of various lines of products under the maquila program offered by the mexican government, which makes operation and administration an economically and strategic plus for the plant. Some data:<br>
             <br>
             81,000 sq ft of working space<br>
             <br>
